JHD: FIXES on cardphase drawship method